Responsive design Course preview bug fixed on without template mode. Course student side responsiveness styled. Seli media player styles defined for responsive design.

--- a/SELI-Platform/client/stylesheet/course-menu.css
+++ b/SELI-Platform/client/stylesheet/course-menu.css
@@ -171,8 +171,13 @@
   letter-spacing: 2px !important;
 }
 
-
 .courseInformation{
   color: blue,
-
 }
+
+/* Media Queries: Tablet Landscape */
+@media screen and (max-width: 1080px) {
+  .course-menu-options-container {
+    width: 85vw;
+  }
+} 
