--- a/SELI-Platform/client/stylesheet/dialog.css
+++ b/SELI-Platform/client/stylesheet/dialog.css
@@ -391,10 +391,12 @@
 
 /* Media Queries: Tablet Landscape */
 @media screen and (max-width: 1080px) {
-
   .dialog-form-container {
     width: 86vw !important;
     justify-content: center;
     align-items: center;
+  }
+  .app-tooltip {
+    display: none;
   }
 } 
