--- a/SELI-Platform/client/stylesheet/media-player.css
+++ b/SELI-Platform/client/stylesheet/media-player.css
@@ -9,7 +9,7 @@
 
 .media-player-container {
   width: 100vw;
-  height: calc(100vh - var(--app-bar-height));
+  height: calc(100vh - var(--app-bar-height) - 1px);
   position: relative;
   overflow-y: hidden;
 }
@@ -27,13 +27,29 @@
 .media-player-controllers-container {
   width: 98vw;
   padding: 0 1vw;
-  height: 10vh;
+  height: 80px;
   position: absolute;
   bottom: 0px;
   background-color: var(--app-bar-color) !important;
-  display: flex;
-  align-items: center;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
   opacity: 0.95;
+  z-index: 100;
+}
+
+.media-player-controllers-container-a11y {
+  width: 63vw;
+  padding: 0 1vw;
+  height: 80px;
+  position: absolute;
+  bottom: 0px;
+  background-color: var(--app-bar-color) !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  opacity: 0.95;
+  z-index: 100;
 }
 
 .video-media-player {
@@ -104,6 +120,7 @@
 
 .media-player-slider-small {
   width: 7.5vw !important;
+  margin-right: 1.5vw;
 }
 
 .media-player-a11y-container {
@@ -136,12 +153,13 @@
 }
 
 .media-a11y-container {
+  background-color: #424242;
   width: 35vw;
 }
 
 .image-media-player-paper {
   width: 100vw !important;
-  height: calc(100vh - var(--app-bar-height)) !important;
+  height: calc(100vh - var(--app-bar-height) - 1px) !important;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -151,7 +169,7 @@
 
 .image-media-player-paper-a11y {
   width: 65vw !important;
-  height: calc(100vh - var(--app-bar-height)) !important;
+  height: calc(100vh - var(--app-bar-height) - 1px) !important;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -178,3 +196,64 @@
   z-index: 1000;
   background-color: #424242;
 }
+
+/* Media Queries: Tablet Landscape */
+@media screen and (max-width: 1080px) {
+  .fullscreen-media-container {
+    display: inline;
+    height: 100% !important;
+  }
+  .video-media-player-a11y {
+    width: 100vw !important;
+    height: calc(50vh - var(--app-bar-height)) !important;
+  }
+  .image-media-player-paper-a11y {
+    width: 100vw !important;
+    height: calc(50vh - var(--app-bar-height)) !important;
+  }
+  .media-a11y-container {
+    width: 100vw;
+    height: calc(50vh - 1px) !important;
+    overflow-y: scroll;
+  }
+  .media-player-controllers-container {
+    width: 100vw;
+    padding: 0 0vw;
+    height: 50px;
+    bottom: 0px;
+  }
+  .media-player-controllers-container-a11y {
+    width: 100vw;
+    padding: 0 0vw;
+    height: 50px;
+    bottom: calc(50vh - 1px);
+  }
+  .media-player-icon {
+    position: absolute;
+    font-size: 30px !important;
+  }
+  .media-player-icon-button {
+    height: 40px;
+    width: 40px;
+    position: relative;
+    justify-content: center;
+  }
+  .media-player-icon-button-des {
+    height: 40px;
+    width: 40px;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center;
+  }
+  .media-player-medium-label {
+    font-size: 17px !important;
+    letter-spacing: 1px !important;
+    margin: 0 0vw !important;
+  }
+  .media-player-slider {
+    margin-left: 2vw;
+  }
+  .media-player-slider-small {
+    width: 25vw !important;
+  }
+} 
