--- a/SELI-Platform/client/stylesheet/course-information.css
+++ b/SELI-Platform/client/stylesheet/course-information.css
@@ -30,6 +30,9 @@
 .headAccessibility{
   padding: 2.5vh 6vw;
 }
+.sylabusStyles{
+  padding-bottom: 35px;
+}
 
 .form-input-audiences {
   max-height: calc(100% - 15vh);
