--- a/SELI-Platform/client/stylesheet/form-stepper.css
+++ b/SELI-Platform/client/stylesheet/form-stepper.css
@@ -1,6 +1,6 @@
 .form-stepper-container {
   width: 100vw;
-  position: fixed;
+  position: absolute;
   height: calc(100vh - var(--app-bar-height));
 }
 .form-stepper-navigation {
@@ -21,7 +21,7 @@
   align-items: center;
   justify-content: center;
   height: var(--form-stepper-height);
-  position: relative;
+  position: fixed;
   padding-left: 1vw;
   padding-right: 1vw;
   background-color: #f5f5f5;
