Responsive design RetrivePasswd and UserRegistration were styled for RD

--- a/SELI-Platform/client/stylesheet/dialog.css
+++ b/SELI-Platform/client/stylesheet/dialog.css
@@ -28,6 +28,7 @@
 }
 
 .dialog-label-title {
+  width: calc(100% - 75px) !important;
   color: var(--white) !important;
   text-transform: uppercase;
   font-weight: 100;
