--- a/SELI-Platform/client/stylesheet/course-information.css
+++ b/SELI-Platform/client/stylesheet/course-information.css
@@ -4,6 +4,7 @@
   display: flex;
   position: relative;
   animation: fadeIn 1s;
+  overflow-y: scroll;
 }
 
 .course-information-container {
@@ -195,7 +196,9 @@
 }
 
 .file-form-dialog {
-  max-width: 67.5vw;
+  width: 67.5vw;
+  display: flex;
+  justify-content: center;
 }
 
 .form-preview-container {
@@ -333,8 +336,8 @@
 }
 
 .form-multiple-input {
-  width: 15vw !important;
-  margin-right: 8px !important;
+  min-width: 100px !important;
+  margin-right: 10px !important;
 }
 
 .form-multiple-input-row {
@@ -343,4 +346,30 @@
 
 .report{
   overflow-y: scroll;
+}
+
+@media only screen and (max-width: 1080px)  {
+  .user-information-container {
+    flex-direction: column;
+    overflow-y: scroll !important;
+  }
+  .form-dialog {
+    width: 100vw !important;
+  }
+  .file-form-dialog {
+    width: auto;
+  }
+  .form-preview-container {
+    width: 80vw !important;
+  }
+  .form-file-column {
+    width: 100%;
+    height: auto;
+  }
+  .form-image-button {
+    height: 300px  !important;
+  }
+  .form-request-information {
+    height: 150px  !important;
+  }
 }
