--- a/SELI-Platform/client/stylesheet/storytelling.css
+++ b/SELI-Platform/client/stylesheet/storytelling.css
@@ -252,6 +252,7 @@
 
 .storytelling-media-image1 {
   align-content: center;
+  width: 100%;
   height: 200px;
   background-repeat: no-repeat;
   background-position: center;
