Responsive design Bottom stepper bar designed. Video edition windows styles chaged. Title of the content defined for RD.

--- a/SELI-Platform/client/stylesheet/course-creator-tool.css
+++ b/SELI-Platform/client/stylesheet/course-creator-tool.css
@@ -383,6 +383,9 @@
     top: -26px !important;
     right: 5px !important;
     z-index: 210;
-    background-color: #cacaca !important;
+    background-color: #cacacaab !important;
+  }
+  .title-course{
+    width: 100vw;
   }
 } 
