--- a/SELI-Platform/client/stylesheet/accessibility-form.css
+++ b/SELI-Platform/client/stylesheet/accessibility-form.css
@@ -1,3 +1,8 @@
+.accessibility-main-container {
+	flex-grow: 1;
+	display: flex;
+}
+
 .accessibility-form-container {
   width: 40vw;
   min-height: auto;
@@ -47,10 +52,9 @@
 
 .accessibility-percentage-container {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   justify-content: center;
-  margin-top: 2vh;
   position: relative;
 }
 
@@ -60,12 +64,13 @@
 }
 
 .accessibility-progress {
-  margin-left: 1vw;
   width: 80px;
   height: 80px;
   z-index: 205;
   position: absolute;
-  right: calc(50% - 40px);
+  left: 10px;
+  top: -40px;
+  opacity: 0.75;
 }
 
 .accessibility-percentage-value {
@@ -75,11 +80,13 @@
   justify-content: center;
   align-items: center;
   position: absolute;
-  right: calc(50% - 40px);
+  left: 10px;
+  top: -40px;
   background-color: #f5f5f5;
   border-radius: 100%;
   z-index: 200;
   font-size: 0.8em;
+  opacity: 0.75;
 }
 
 .subtitle-divider {
@@ -162,8 +169,10 @@
   max-width: 50vw !important;
   width: 40vw !important;
   min-width: 40vw !important;
-  max-height: 75vh;
+  max-height: 70vh !important;
   overflow-y: scroll;
+  display: flex;
+  justify-content: center;
 }
 
 .a11yEditor {
@@ -180,10 +189,6 @@
   color:  #a59e9e;
   font-size: 0.7em;
 }
-
-
-
-
 
 .a11yEditor-root {
   background: #fff;
@@ -339,7 +344,6 @@
   text-align: center;
 }
 
-
 .hide{
   display: none!important;
 }
@@ -373,4 +377,17 @@ margin-right: 5px
 
 .butttomPicker{
 margin-left:  10px;
+}
+
+@media only screen and (max-width: 1080px)  {
+  .accessibility-main-container {
+    display: inline;
+  }
+  .accessibility-form-side-container {
+    max-width: 100% !important;
+    width: 100% !important;
+    min-width: 100% !important;
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
 }
