--- a/SELI-Platform/client/stylesheet/course-creator-tool.css
+++ b/SELI-Platform/client/stylesheet/course-creator-tool.css
@@ -77,8 +77,22 @@
   height: calc(100vh - var(--app-bar-height) - 2*var(--form-stepper-height));
   overflow-y: scroll;
   position: absolute;
-  right: 0;
+  top: 0px;
+  right: 0px;
   background-color: #f5f5f5;
+  z-index: 800;
+}
+
+.course-creator-menu-area-aux {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: var(--course-tool-menu-size);
+  height: calc(100vh - var(--app-bar-height) - var(--form-stepper-height));
+  overflow-y: scroll;
+  background-color: #f5f5f5;
+  z-index: 800;
+  animation: fadeInRight 0.4s;
 }
 
 .unit-actions-button-container {
@@ -359,21 +373,8 @@
   display: none !important;
 }
 
-.course-creator-menu-area-aux {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  width: var(--course-tool-menu-size);
-  height: calc(100vh - var(--app-bar-height) - var(--form-stepper-height));
-  overflow-y: scroll;
-  background-color: #f5f5f5;
-  z-index: 200;
-  animation: fadeInRight 0.4s;
-}
-
 /* Media Queries: Tablet Landscape */
 @media screen and (max-width: 1080px) {
-  .course-creator-work-area { width:100%;  display: block } 
   .general-container-drop-area {width: 100% !important;}
   .drop-items-right-menu {
     display: inline !important;
@@ -382,10 +383,16 @@
     height: 50px !important;
     top: -26px !important;
     right: 5px !important;
-    z-index: 210;
+    z-index: 1000;
     background-color: #cacacaab !important;
   }
   .title-course{
     width: 100vw;
+  }
+  .course-creator-menu-area {
+    display: none !important;
+  }
+  .course-creator-menu-area {
+    right: calc(0px - var(--course-tool-menu-size));
   }
 } 
