--- a/SELI-Platform/client/stylesheet/form-stepper.css
+++ b/SELI-Platform/client/stylesheet/form-stepper.css
@@ -1,7 +1,9 @@
 .form-stepper-container {
   width: 100vw;
   position: absolute;
+  top: var(--app-bar-height);
   height: calc(100vh - var(--app-bar-height));
+  overflow: hidden;
 }
 
 .form-stepper-navigation {
@@ -10,8 +12,18 @@
   align-items: center;
   height: var(--form-stepper-height);
   position: relative;
-  top: var(--app-bar-height);
   background-color: #f5f5f5;
+  animation: fadeInDown 0.5s;
+}
+
+.form-stepper-navigation-id {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  height: var(--form-stepper-height) !important;
+  max-height: var(--form-stepper-height) !important;
+  position: relative;
+  background-color: #e8e8e8 !important;
   animation: fadeInDown 0.5s;
 }
 
@@ -27,7 +39,14 @@
   padding-right: 1vw;
   background-color: #f5f5f5;
   animation: fadeInDown 0.5s;
-  z-index: 100;
+}
+
+.form-stepper-large-steps {
+  width: 100%;
+  background-color: #e8e8e8 !important;
+  padding: 0px !important;
+  height: calc(100%) !important;
+  overflow: hidden;
 }
 
 .navBar{
@@ -55,7 +74,7 @@
 
 .form-stepper-information-id {
   background-color: #e8e8e8;
-  padding: 18px;
+  padding: 9px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -96,7 +115,8 @@
 }
 
 .form-step {
-
+  padding: 0px !important;
+  margin: 0 10px;
 }
 
 .form-step-button {
@@ -145,8 +165,12 @@
 
 .form-stepper-content {
   position: relative;
-  top: var(--form-stepper-height);
   height: calc(100vh - var(--form-stepper-height) - var(--app-bar-height));
+}
+
+.form-stepper-content-id {
+  position: relative;
+  height: calc(100vh - var(--form-stepper-height) - 2*var(--app-bar-height));
 }
 
 .form-step-completed-step-container {
@@ -215,19 +239,24 @@
     padding: 9px;
     width: 50vw;
   }
+  .form-stepper-navigation {
+    height: auto;
+  }
   .form-stepper-actions {
     width: 50vw;
     display: flex;
     justify-content: center;
   }
-  .form-stepper-navigation {
+  .form-stepper-content {
     height: auto;
   }
   .navBar{
     justify-content: center;
+    z-index: 100;
   }
   .navBarBackNext {
     justify-content: center;
+    z-index: 100;
   }
 }
 
