--- a/SELI-Platform/imports/components/student/shared/style.css
+++ b/SELI-Platform/imports/components/student/shared/style.css
@@ -22,6 +22,11 @@
    margin-bottom: 20px;
  
 }
+.crnheadingtitle{
+   margin-top: 20px;
+   margin-bottom: 20px;
+   font-size: 30px;
+}
 .crnheading1{
    display: block;
    margin-top: 15px;
