--- a/SELI-Platform/client/stylesheet/subscriptions.css
+++ b/SELI-Platform/client/stylesheet/subscriptions.css
@@ -10,11 +10,12 @@
 }
 
 .subscription-card-media {
-  width: 35vw !important;
+  width: 40vw !important;
   height: var(--subscription-card-height) !important;
 }
 
 .subscription-card {
+  width: calc(100% - 10vw);
   margin-bottom: 1vh !important;
   max-height: 50vh !important;
   padding: 0.5vh 5vw !important;
@@ -54,6 +55,7 @@
 
 .subscription-card-column {
   height: var(--subscription-card-height);
+  width: calc(100% - 40vw);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -61,7 +63,7 @@
 }
 
 .subscription-card-content {
-  width: 53vw !important;
+  width: calc(100% - 2vw) !important;
   padding: 0 1vw !important
 }
 
@@ -137,6 +139,7 @@
 /* Media Queries: Tablet Landscape */
 @media screen and (max-width: 1080px) {
   .subscription-card {
+    width: calc(100% - 2vw);
     max-height: 50vh !important;
     padding: 0.5vh 1vw !important;
   }
@@ -145,8 +148,8 @@
     padding: 0.5vh 1vw !important;
   }
   .subscription-card-content {
-    width: 65vw !important;
+    width: calc(100% - 1vw) !important;
     padding-left: 0.8vw !important;
-    padding-right: 0vw !important;
+    padding-right: 0.2vw !important;
   }
 } 
