Responsive Design Modularization of publish windows of storytelling tools. Responsive design styled for digital story telling tools.

--- a/SELI-Platform/client/stylesheet/dialog.css
+++ b/SELI-Platform/client/stylesheet/dialog.css
@@ -409,4 +409,11 @@
   .configure-accessibility-actions {
     width: 100%;
   }
+  .form-tabs-container-time {
+    width: 95px;
+    position: relative;
+  }
+  .success-dialog-content-storytelling-time {
+    width: calc(75vw) !important;
+  }
 } 
