--- a/SELI-Platform/client/stylesheet/library.css
+++ b/SELI-Platform/client/stylesheet/library.css
@@ -67,8 +67,8 @@
 }
 
 .audio-card-storytelling {
-  width: 21vw !important;
-  margin: 0.5vh 0.4vw;
+  width: calc(50% - 10px) !important;
+  margin: 0.5vh 5px;
   opacity: 0.9;
   transition: 0.5s !important;
   background-color: #fafafa !important;
@@ -103,13 +103,14 @@
 }
 
 .card-media-audio-storytelling {
-  width: 96% !important;
+  width: 98%;
   padding-top: 0.5vh;
   padding-bottom: 0.5vh;
   display: flex;
   margin: auto;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .card-media-pdf {
@@ -255,123 +256,20 @@
   font-size: 1.2em !important
 }
 
-
-
-/*
-
-.file-card {
-  width: 23vw !important;
-  height: 30vh !important;
-  position: relative;
-  margin-left: 0.165vw;
-  margin-right: 0.165vw;
-  overflow: hidden;
-  padding-top: 2vh;
+@media only screen and (max-width: 1080px)  {
+  .library-files-container {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 85vw;
+    min-width: 85vw;
+    min-height: auto;
+    max-height: auto;
+    overflow-y: scroll;
+    align-items: flex-start;
+    place-content: flex-start;
+  }
+  .audio-card-storytelling {
+    width: calc(100% - 10px) !important;
+    margin: 0.5vh 5px;
+  }
 }
-
-.card-media-audio {
-  height: calc(30vh - 3em) !important;
-  background-size: 0vw !important;
-  background-position: center !important;
-  background-repeat: no-repeat !important;
-  position: relative;
-  overflow: hidden;
-  background-color: #f5f5f5;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  background-image: url(audio-track.svg);
-  transition: 0.5s;
-}
-
-.card-media-pdf {
-  width: 23vw;
-  height: calc(22.5vh - 3em) !important;
-  display: flex !important;
-  justify-content: center;
-  align-items: center;
-  background-color: #ffebee;
-  position: relative;
-  overflow: hidden;
-}
-
-.card-media-compressed {
-  width: 23vw;
-  height: calc(22.5vh - 3em) !important;
-  display: flex !important;
-  justify-content: center;
-  align-items: center;
-  background-color: #d1c4e9;
-  position: relative;
-  overflow: hidden;
-}
-
-.card-media-text {
-  width: 20vw;
-  padding: 0 1.5vw;
-  height: 7.5vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 0.8em;
-  text-align: center;
-  letter-spacing: 0.75px;
-  word-break: break-all;
-  background-color: #fafafa;
-}
-
-.card-media-audio:hover {
-  background-color: #eeeeee;
-  background-size: 2vw !important;
-  background-image: url(audio-track.svg);
-}
-
-.card-media-audio:focus {
-  outline: none !important;
-  border: none;
-  box-shadow: none;
-}
-
-.files-result-container {
-  width: auto;
-  display: flex;
-  justify-content: flex-start;
-  overflow-x: scroll;
-}
-
-.file-information-card {
-  width: 21vw;
-  word-break: break-all;
-}
-
-.image-avatar {
-  background-color: #ffc107 !important;
-}
-
-.video-avatar {
-  background-color: #f44336 !important;
-}
-
-.audio-avatar {
-  background-color: #3f51b5 !important;
-}
-
-.pdf-avatar {
-  background-color: #ff9800 !important;
-}
-
-.compressed-avatar {
-  background-color: #4caf50 !important;
-}
-
-.file-information-card-header {
-  background-color: #eeeeee !important;
-  font-size: 0.9em !important;
-}
-
-.file-information-card-content {
-  font-size: 0.8em !important;
-  padding-left: 3vw !important;
-}
-*/
