--- a/SELI-Platform/client/stylesheet/preview.css
+++ b/SELI-Platform/client/stylesheet/preview.css
@@ -24,6 +24,7 @@
   justify-content: center;
   align-items: center;
   animation: fadeInDown 0.25s;
+  background-color: black;
 }
 
 .file-preview-information {
