Browser scrolls to the bottom of page on load of Course Topic page #192

--- a/SELI-Platform/client/stylesheet/course-menu.css
+++ b/SELI-Platform/client/stylesheet/course-menu.css
@@ -180,4 +180,8 @@
   .course-menu-options-container {
     width: 85vw;
   }
+  .course-menu-button-container {
+    top: calc(var(--app-bar-height) + 1px);
+    right: 1px;
+  }
 } 
