--- a/SELI-Platform/client/stylesheet/course.css
+++ b/SELI-Platform/client/stylesheet/course.css
@@ -2,7 +2,6 @@
   width: 100vw;
   max-height: calc(100vh - var(--app-bar-height));
   height: calc(100vh - var(--app-bar-height));
-  overflow-y: scroll;
   position: relative;
   top: var(--app-bar-height);
 }
@@ -17,7 +16,9 @@
 
 .course-content-container {
   width: calc(100% - 130px);
+  height: calc(100vh - var(--app-bar-height) - 10vh);
   padding: 5vh 65px;
+  overflow-y: scroll;
 }
 
 .course-content-breadcrumbs-container {
@@ -30,8 +31,16 @@
 }
 
 .course-content-breadcrumbs-paper-quiz {
-  margin-top: 2px !important;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: calc(var(--app-bar-height) + 15px);
+  min-height: 40px;
   margin-left: 60px;
+  margin-right: 80px;
+  background-color: #fafafa;
+  opacity: 0.8;
+  z-index: 100;
 }
 
 .course-content-breadcrumb-text {
@@ -128,9 +137,15 @@
   }
   .course-content-container {
     width: calc(100% - 0px);
+    height: calc(100vh - var(--app-bar-height) - 2vh);
     padding: 1vh 0px;
   }
   .course-content-menu-button {
     display: none !important;
+  }
+  .course-content-breadcrumbs-paper-quiz {
+    top: calc(var(--app-bar-height) + 1px);
+    margin-left: 1px;
+    margin-right: 70px;
   }
 } 
