Adding draftail library Alignment feature of Text Component enables teachers to create inaccessible content #173 Paste feature of Text Component enables teachers to create inaccessible content #174

--- a/SELI-Platform/client/stylesheet/item.css
+++ b/SELI-Platform/client/stylesheet/item.css
@@ -534,7 +534,7 @@
 
 .activity-item-container-instruction {
   width: calc(100% - 5%);
-  padding: 1.5vh 2.5%;
+  margin: 1.5vh 2.5%;
   color: #616161;
 }
 
