--- a/SELI-Platform/client/stylesheet/editor.css
+++ b/SELI-Platform/client/stylesheet/editor.css
@@ -28,7 +28,8 @@
 
 .editor-block {
   width: 100%;
-  height: 30vh;
+  max-height: 30vh;
+  overflow-y: auto;
   animation: fadeInUp 0.35s;
 }
 
@@ -124,6 +125,10 @@
 .editor-icon-link {
   color: #757575 !important;
   fill: #757575 !important;
+}
+
+.a11y-editor-container {
+  margin: 10px 10px;
 }
 
 @media only screen and (max-width: 1080px)  {
