--- a/SELI-Platform/client/stylesheet/profiles.css
+++ b/SELI-Platform/client/stylesheet/profiles.css
@@ -35,7 +35,7 @@
 }
 
 .student-profile-information-container-comment {
-  width: calc(75vw - 200px);
+  width: calc(100% - 4vw - 50px) !important;
   padding-top: 2vh !important;
   padding-left: 1vw !important;
   padding-right: 3vw !important;
@@ -151,5 +151,14 @@
 .studentTable{
   margin-top: 19px;
   margin-left: 5px
-
 }
+
+/* Media Queries: Tablet Landscape */
+@media screen and (max-width: 1080px) {
+  .student-profile-avatar-comment {
+    width: 36px !important;
+    height: 36px !important;
+    font-size: 18px!important;
+    margin-right: 1px;
+  }
+} 
