--- a/SELI-Platform/client/stylesheet/templates.css
+++ b/SELI-Platform/client/stylesheet/templates.css
@@ -10,6 +10,12 @@
   height: calc(100% - 40px);
 }
 
+.template-container-student {
+  background-color: white;
+  width: 100%;
+  height: auto;
+}
+
 .template-background-text {
   font-size: 15px;
   margin-top: 20px;
@@ -61,10 +67,11 @@
   display: flex;
   width: 100%;
   margin-bottom: 30px;
+  justify-content: center;
 }
 
 .template-child-gallery {
-  width: 100%;
+  width: calc(100%) !important;
   background-color: #121212;
 	padding: 5px;
 	color: white;
