--- a/SELI-Platform/client/stylesheet/item.css
+++ b/SELI-Platform/client/stylesheet/item.css
@@ -137,15 +137,18 @@
 }
 
 .image-item-container-child {
-  margin-right: 1vw;
-  margin-top: 8px;
-  margin-bottom: 20px;
-  width: 360px;
-  height: 270px;
+  margin: 5px 0px;
   cursor: pointer;
 }
 
 .image-item-container {
+  width: 95%;
+  padding-top: 1.5vh;
+  display: flex;
+  align-items: center;
+}
+
+.image-item-container-template {
   width: 95%;
   padding-top: 1.5vh;
   display: flex;
@@ -642,5 +645,10 @@ summary:hover {
     max-width: 350px !important;
     height: 200px !important;
     padding: 0.5vh 0 !important;
+  }
+} 
+@media screen and (max-width: 1600px) {
+  .image-item-container-template {
+    display: inline;
   }
 } 
