--- a/SELI-Platform/client/stylesheet/item.css
+++ b/SELI-Platform/client/stylesheet/item.css
@@ -67,6 +67,7 @@
   width: 100% !important;
   height: auto;
   position: relative;
+  overflow: hidden;
 }
 
 .content-boxstudent {
@@ -137,7 +138,7 @@
 }
 
 .image-item-container-child {
-  margin: 5px 0px;
+  margin-right: 70px;
   cursor: pointer;
 }
 
@@ -645,6 +646,9 @@ summary:hover {
     max-width: 350px !important;
     height: 200px !important;
     padding: 0.5vh 0 !important;
+  }
+  .image-item-container-child {
+    margin-right: 0px;
   }
 } 
 @media screen and (max-width: 1600px) {
