Course bugs Text item bug when creating titles. Template min-height correct when there is no content. Tamplate boxes updated when navigating between topic or units. Template validation of drop spaces method corrected.

--- a/SELI-Platform/client/stylesheet/templates.css
+++ b/SELI-Platform/client/stylesheet/templates.css
@@ -8,6 +8,7 @@
   background-color: white;
   width: 100%;
   height: calc(100% - 40px);
+  overflow-y: scroll;
 }
 
 .template-container-student {
@@ -28,7 +29,6 @@
 
 .template-row {
   display: flex;
-  min-height: var(--template-row) !important;
 }
 
 .template-row-item {
