--- a/SELI-Platform/client/stylesheet/item.css
+++ b/SELI-Platform/client/stylesheet/item.css
@@ -130,6 +130,23 @@
 
 /* Image */
 
+.discrete-slider-container {
+  background-color: #eeeeee;
+  padding: 0 15px;
+  border-radius: 15px;
+  width: calc(100% - 120px);
+  margin-top: 10px;
+  margin-left: 10px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.discrete-slider-import {
+  margin-left: 12px;
+}
+
 .image-content-item {
   width: 100% !important;
   height: auto;
@@ -137,23 +154,27 @@
   justify-content: center;
 }
 
-.image-item-container-child {
-  margin-right: 70px;
+.image-item-container {
+  width: calc(100% - 30px);
+  padding: 10px 15px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
   cursor: pointer;
 }
 
-.image-item-container {
-  width: 95%;
-  padding-top: 1.5vh;
+.image-item-container-template {
+  width: calc(100% - 30px);
+  padding: 10px 15px;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
+  cursor: pointer;
 }
 
-.image-item-container-template {
-  width: 95%;
-  padding-top: 1.5vh;
-  display: flex;
-  align-items: center;
+.file-image-preview-image {
+  padding-right: 10px;
+  max-height: 100%;
 }
 
 .image-item {
@@ -646,9 +667,6 @@ summary:hover {
     max-width: 350px !important;
     height: 200px !important;
     padding: 0.5vh 0 !important;
-  }
-  .image-item-container-child {
-    margin-right: 0px;
   }
 } 
 @media screen and (max-width: 1600px) {
