--- a/SELI-Platform/client/stylesheet/course-information.css
+++ b/SELI-Platform/client/stylesheet/course-information.css
@@ -35,11 +35,17 @@
   padding-bottom: 35px;
 }
 
-.form-input-audiences {
-  height: calc(100% - 8vh) !important;
-  overflow-y: scroll;
-  padding: 4vh 6vw;
+.form-input-container {
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
 }
+
+.form-input-steps {
+  width: calc(1080px - 120px);
+  padding: 4vh 60px;
+}
+
 .alignText{
   display: flex;
   flex-wrap: wrap;
@@ -68,6 +74,7 @@
   padding-left: 1vw;
   padding-right: 1vw;
   padding-top: 1vh;
+  width: 200px;
   align-items: center;
   display: flex;
 }
@@ -249,10 +256,6 @@
 
 .form-file-selected-image-container {
   width: 100%;
-  height: 40vw;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
   animation: fadeInLeft 0.5s;
   background-color: #fafafa;
   transition: 0.5s;
@@ -368,6 +371,10 @@
 }
 
 @media only screen and (max-width: 1080px)  {
+  .form-input-steps {
+    width: calc(100% - 4vw);
+    padding: 4vh 2vw;
+  }
   .user-information-container {
     flex-direction: column;
     height: calc(100vh - var(--app-bar-height) - var(--form-stepper-height));
