Add three-dot options button

--- a/SELI-Platform/client/stylesheet/profiles.css
+++ b/SELI-Platform/client/stylesheet/profiles.css
@@ -162,3 +162,10 @@
     margin-right: 1px;
   }
 } 
+
+
+.student-profile-information-text-comment-button-option{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
