--- a/SELI-Platform/client/stylesheet/data-display.css
+++ b/SELI-Platform/client/stylesheet/data-display.css
@@ -1,47 +1,19 @@
-.input-file-container {
-  position: relative;
-  width: 225px;
-} 
-.js .input-file-trigger {
-  display: block;
-  padding: 14px 45px;
-  background: #39D2B4;
-  color: #fff;
-  font-size: 1em;
-  transition: all .4s;
-  cursor: pointer;
-}
-.js .input-file {
-  position: absolute;
-  top: 0; left: 0;
-  width: 225px;
-  opacity: 0;
-  padding: 14px 0;
-  cursor: pointer;
-}
-.js .input-file:hover + .input-file-trigger,
-.js .input-file:focus + .input-file-trigger,
-.js .input-file-trigger:hover,
-.js .input-file-trigger:focus {
-  background: #34495E;
-  color: #39D2B4;
+.inputfile-3 + label {
+  color: #283f72;
 }
 
-.file-return {
-  margin: 0;
+.boton1{
+  color: #283f72;
+  border-radius: 10px;
+  background-color: rgb(215, 215, 238);
+  padding: 8px;
+  margin: 5px;
 }
-.file-return:not(:empty) {
-  margin: 1em 0;
-}
-.js .file-return {
-  font-style: italic;
-  font-size: .9em;
-  font-weight: bold;
-}
-.js .file-return:not(:empty):before {
-  content: "Selected file: ";
-  font-style: normal;
-  font-weight: normal;
+
+.inputfile-3:focus + label,
+.inputfile-3.has-focus + label,
+.inputfile-3 + label:hover {
+  color: #722040;
 }
 
 
