Storytelling tool Audio records bug corrected. Prevent white windows on move between scenes. Next and previous audio is showed when more than one audio. 'no audio' label added when an scene is empty.

--- a/SELI-Platform/client/stylesheet/storytelling-time.css
+++ b/SELI-Platform/client/stylesheet/storytelling-time.css
@@ -192,6 +192,15 @@
   z-index: 6;
 }
 
+.storytelling-no-wave {
+  color: #e05f5f !important;
+  font-size: 1.2em;
+  height: 100%;
+  padding: 0 10px;
+  display: flex;
+  align-items: center;
+}
+
 .storytelling-script-time {
   position: relative;
   margin-top: 0.5vh;
