--- a/SELI-Platform/client/stylesheet/sign.css
+++ b/SELI-Platform/client/stylesheet/sign.css
@@ -46,6 +46,11 @@
   margin: 0 0.5vw !important;
 }
 
+.sign-button-import {
+  letter-spacing: 2px !important;
+  margin: 10px 0.5vw !important;
+}
+
 .sign-button-default {
   width: 35%;
   padding: 0.75vh 1.95vw !important;
