Authoring Tool - Information step #74

--- a/SELI-Platform/client/stylesheet/course-information.css
+++ b/SELI-Platform/client/stylesheet/course-information.css
@@ -368,6 +368,10 @@
   overflow-y: scroll;
 }
 
+.add-keyword-button {
+  margin-left: 10px;
+}
+
 @media only screen and (max-width: 1080px)  {
   .form-input-steps {
     width: calc(100% - 4vw);
