Account management Changing profile picture bug fixed. Ask for current password to change a new one. Username change disabled. When changing a new email, the system asks if already exists.

--- a/SELI-Platform/client/stylesheet/course-information.css
+++ b/SELI-Platform/client/stylesheet/course-information.css
@@ -23,7 +23,7 @@
 }
 
 .form-input-column {
-  min-width: 40vw;
+  max-width: calc(720px);
   max-height: 100%;
   padding: 2.5vh 6vw;
 }
@@ -395,6 +395,8 @@
     height: auto;
   }
   .form-input-column {
+    max-width: 100%;
+    padding: 1vh 1vw;
     margin-bottom: 20px; 
   }
   .form-image-button {
