Account registration Prevent type email adress already used on the system. Responsive Design for Account registration and management.

--- a/SELI-Platform/client/stylesheet/account-management.css
+++ b/SELI-Platform/client/stylesheet/account-management.css
@@ -86,7 +86,7 @@
 
 @media only screen and (max-width: 1080px)  {
   .account-management-container {
-    display: inline;
+    display: block;
     overflow-y: scroll !important;
   }
   .account-management-file-column {
