--- a/SELI-Platform/client/stylesheet/course-information.css
+++ b/SELI-Platform/client/stylesheet/course-information.css
@@ -1,10 +1,8 @@
 .user-information-container {
   width: 100%;
-  height: 100%;
+  height: 100% !important;
   display: flex;
-  position: relative;
   animation: fadeIn 1s;
-  overflow-y: scroll;
 }
 
 .course-information-container {
@@ -20,6 +18,10 @@
   width: var(--file-column-width);
   height: 100%;
   background-color: #fcfcfc;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .form-input-column {
@@ -378,8 +380,8 @@
     padding: 4vh 2vw;
   }
   .user-information-container {
-    flex-direction: column;
-    height: calc(100vh - var(--app-bar-height) - var(--form-stepper-height));
+    display: block;
+    overflow-y: scroll !important;
   }
   .form-dialog {
     width: 100vw !important;
